samples/_failures_safe/1761558932_b9e8f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73c8b8e3.c: In function ‘main’:
./samples/SAFE/__tmp_73c8b8e3.c:147:12: error: missing terminating " character
  147 |     printf("Compressed size
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_73c8b8e3.c:147:5: error: expected expression at end of input
  147 |     printf("Compressed size
      |     ^~~~~~
./samples/SAFE/__tmp_73c8b8e3.c:147:5: error: expected declaration or statement at end of input
